Add .env and .gitignore files

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -51,9 +51,11 @@ header {
     color: white;
 }
 
+/*
 .flash-messages {
-    margin-top: 20px;
+    margin-top: 10px;
 }
+*/
 
 .hero-container {
     padding-top: 150px;
